# app_server/routes/users.routes.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const router = express.Router();
-const { requireRole } = require("../../middleware/authMiddleware");
+const {requireRole} = require("../../middleware/authMiddleware");
 const userController = require("../controllers/user.controller");
 
 // Needed for forum functionality
@@ -13,9 +13,11 @@ router.post('/change-password', requireRole(['Admin', 'Basic']), userController.
 
 // Admin-only routes
 router.put('/makeAdmin', requireRole(['Admin']), userController.makeAdmin);
+router.put('/withdrawAdmin', requireRole(['Admin']), userController.withdrawAdmin);
 router.put('/banUser', requireRole(['Admin']), userController.banUser);
+router.put('/unbanUser', requireRole(['Admin']), userController.unbanUser); // New endpoint
 router.delete('/deleteUser', requireRole(['Admin']), userController.deleteUser);
-router.put('/update-details', requireRole(['Admin']), userController.updateUserDetails);
+router.put('/update-details', requireRole(['Admin' , "Basic"]), userController.updateUserDetails);
 
 router.get('/getAll', requireRole(['Admin']), userController.getUsers);
 
